@@ -10,6 +10,10 @@
 
 
 
+* 2010-11-24 Benny Simonsen Part 1
+
+  classNames for T.O.C links to highlight the current page in the TOC.
+
 * 2010-09-01 --- t.TITLE
 
   Make sure the correct heading is used as the =org-html-manager.TITLE= property.
